# LiteratureReviewApp

./: Cargo.toml  Dioxus.toml  README.md
exports/: bibliography.bib
metadata/: categories.ron  category.ron  memos.ron  papers.ron
src/: app_data.rs  common.rs  main.rs
src/categories/: categories.rs  categories_data.rs  categories_table.rs  mod.rs  render.rs
src/components/: badges.rs  buttons.rs  color_picker_modal.rs  mod.rs  padding.rs
src/dashboard/: dashboard.rs  dashboard_data.rs  dashboard_table.rs  mod.rs  render.rs
src/data/: citation.rs  downloader.rs  file_helper.rs  loader.rs  mod.rs  searcher.rs  updater.rs
src/export/: export_data.rs  export_pdf_table.rs  get_data.rs  mod.rs  render.rs
src/general_memos/: general_memo_data.rs  mod.rs  render.rs
src/global_search/: global_search.rs  global_search_data.rs  global_search_results.rs  mod.rs  render.rs
src/helpers/: mod.rs  table_helpers.rs
src/memos/: memo_data.rs  memos.rs  memos_table.rs  mod.rs  render.rs
src/paper_memos/: mod.rs  paper_memo_data.rs  paper_memo_table.rs  render.rs
src/paper_search/: get_data.rs  mod.rs  paper_search.rs  paper_search_data.rs  paper_search_results.rs  render.rs
src/scholar/: mod.rs
src/tables/: categories.rs  dashboard.rs  mod.rs
